@@ -1,3 +1,14 @@
+2001-06-30  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.37.
+
+2001-06-26  gettextize  <bug-gnu-utils@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.10.37.
+	* cat-id-tbl.c: Remove file.
+	* stamp-cat-id: Remove file.
+
+
 2001-07-05  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian translation.
